@@ -14,6 +14,7 @@ MBDyn 1.X-Devel
 		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added "raw" variants of buffer drive and output elem
 	Backward compatibility issues:
+		- reworked output elements syntax
 	Known issues:
 		- aeromodal with rigid-body motion needs work
 		- deformable displacement joint initial assembly broken
